--- a/index.html
+++ b/index.html
@@ -15,10 +15,22 @@
 
 <body>
     <header class="cabecalho">
-        <button class="cabecalho__menu">menu</button>
+        <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
-        <button class="cabecalho __notificacao">notificação</button>
+        <button class="cabecalho__notificacao" aria-label="Notificacao"><i></i></button>
     </header>
+
+    <nav class="menu-lateral">
+        <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
+        <a href="#" class="menu-lateral__link">Início</a>
+        <a href="#" class="menu-lateral__link">Vídeos</a>
+        <a href="#" class="menu-lateral__link">Pícos</a>
+        <a href="#" class="menu-lateral__link">Integrantes</a>
+        <a href="#" class="menu-lateral__link">Camisas</a>
+        <a href="#" class="menu-lateral__link">Pinturas</a>
+    </nav>
+
+    </nav>
 </body>
 
 </html>
