--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
         <button class="cabecalho__notificacao" aria-label="Notificacao"><i></i></button>
     </header>
 
-    <nav class="menu-lateral">
+    <nav class="menu-lateral menu-lateral--ativo">
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
-        <a href="#" class="menu-lateral__link" class="menu-lateral__link--inicio" class="menu-lateral__link--ativo">Início</a>
-        <a href="#" class="menu-lateral__link" class="menu-lateral__link--videos">Vídeos</a>
-        <a href="#" class="menu-lateral__link" class="menu-lateral__link--picos">Pícos</a>
-        <a href="#" class="menu-lateral__link" class="menu-lateral__link--integrantes">Integrantes</a>
-        <a href="#" class="menu-lateral__link" class="menu-lateral__link--camisas">Camisas</a>
-        <a href="#" class="menu-lateral__link" class="menu-lateral__link--pinturas">Pinturas</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--videos" class="">Vídeos</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--picos" class="">Pícos</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--integrantes" class="">Integrantes</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--camisas" class="">Camisas</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--pinturas" class="">Pinturas</a>
+        
     </nav>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
