--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header class="cabecalho">
         <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
+        <p class="cabecalho__perfil">Bruno Lopes</p>
         <button class="cabecalho__notificacao" aria-label="Notificacao"><i></i></button>
     </header>
 
@@ -57,6 +58,39 @@
                 </button>
             </div>
         </article>
+
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <a href="#" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+            </ul>
+        </article>
+
         <section class="secao">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao ">
@@ -135,6 +169,38 @@
                 </div>
             </article>
         </section>
+
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <a href="#" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+            </ul>
+        </article>
 
         <article class="cartao cartao--destaque">
             <img class="cartao__imagem" src="assets/img/banner-mobile_1.png" alt="Banner do cartao">
