--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <img src="assets/img/miniatura_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Vol.3</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_3.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Pescaria na Urca</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_4.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Guerreiros do asfalto</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_5.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Não importa o nível</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
             </ul>
         </article>
@@ -84,7 +84,7 @@
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
@@ -93,7 +93,7 @@
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
@@ -102,7 +102,7 @@
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
@@ -117,27 +117,27 @@
             <ul class="cartao__lista">
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <h4 class="cartao__item-titulo">HZC - Sem título 01</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <img src="assets/img/miniatura_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Sem título 02</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <img src="assets/img/miniatura_3.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Sem título 03</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <img src="assets/img/miniatura_4.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Sem título 04</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <img src="assets/img/miniatura_5.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Sem título 05</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
             </ul>
@@ -166,7 +166,7 @@
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
@@ -175,7 +175,7 @@
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
@@ -184,7 +184,7 @@
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
